@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.5603 2004/04/16 03:49:23 salo Exp $
+$NetBSD: CHANGES,v 1.5604 2004/04/16 11:41:48 recht Exp $
 
 Changes to the packages collection and infrastructure in 2004:
 
@@ -1994,3 +1994,4 @@ Changes to the packages collection and infrastructure in 2004:
 	Updated ogmtools to 1.4 [salo 2004-04-16]
 	Updated tkgate to 1.6inb2 [minskim 2004-04-16]
 	Updated cadaver to 0.22.1 [recht 2004-04-16]
+	Updated neon to 0.24.5 [xtraeme 2004-04-16]
